first html file

--- a/index.html
+++ b/index.html
@@ -10,13 +10,21 @@
    <h1>ASDC</h1>
    <h2>Full stack web development</h2>
    <h3>Mern stack</h3>
-   
-
-   
-
-   
-
-
-   
+   <p>My first html document in asdc</p>
+   <a href="https://www.google.com"></a>
+   <ol>
+    <li>Ahmed</li>
+    <li>Mohammed</li>
+    <li>Ajay</li>
+    <li>Peter</li>
+    <li>Nazeer</li>
+   </ol>
 </body>
 </html>
+   
+
+   
+
+
+   
+
