--- a/table.html
+++ b/table.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment</title>
+    <title>Assignment 3</title>
     <style>
         table,
         tr,
@@ -108,9 +108,7 @@
                 <td>SWA</td>
                 <td>---</td>
 
-                <centre>
-                    <td colspan="3">Lab</td>
-                </centre>
+                <td colspan="3">Lab</td>
             </tr>
             <tr>
                 <td>THURSDAY</td>
@@ -137,9 +135,7 @@
             <tr>
                 <td>SATURDAY</td>
                 <td>SUB1</td>
-                <centre>
-                    <td colspan="3">Seminar</td>
-                </centre>
+                <td colspan="3">Seminar</td>
 
                 <td>SUB4</td>
                 <td>SUB5</td>
