last modification commit

--- a/project.html
+++ b/project.html
@@ -8,10 +8,11 @@
 </head>
 
 <body>
-    <centre>
-        <h1>welcome to the AIR INDIA FLIGHTS</h1>
-    </centre>
-    <img src="" <p>welcome to the ticket booking system! here you search for airline ticket fast and easily</p>
+
+    <h1>welcome to the AIR INDIA FLIGHTS</h1>
+    <img src="https://www.pesapal.com/media/1742/what-your-flight-engine-booking-must-have-to-increase-sales-blog-post-770x335.png?anchor=center&mode=crop&width=355&height=218&rnd=132146340800000000"
+        alt="flights booking">
+    <p>welcome to the ticket booking system! here you search for airline ticket fast and easily</p>
     <h2>An AIR INDIAN FLIGHTS make your journey hassle free & you got a better price than booking directly with the
         airline. we Keep up the good work.</h2>
 
